--- a/1.html
+++ b/1.html
@@ -1,18 +1,25 @@
 <html>
     <head>
         <title>WEB</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h1><a href="index.html"><font color = 'red'>WEB</font></a></h1>
+        <div class = "container">
+            <div id="item1">
+        <ol>
+            <li><a href="1.html"><font color = 'blue'>HTML</font></a></li>
+            <li><a href="2.html"><font color = 'blue'>CSS</font></a></li>
+            <li><a href="3.html"><font color = 'blue'>JS</font></a></li>
+        </ol>
+        </div>
+        <div id = "item2">
         <h1>HTML에 대한 설명</h1>
-        <img src="html.jpg" width="50%">
+        <img src="4.jpg" width="50%">
 
         <strong>하이퍼 텍스트 마크업 언어(영어: Hyper Text Markup Language, HTML, 문화어: 초본문표식달기언어, 하이퍼본문표식달기언어)는 웹 페이지 표시를 위해 개발된 지배적인 마크업 언어다. </strong>또한, HTML은 제목, 단락, 목록 등과 같은 본문을 위한 구조적 의미를 나타내는 것뿐만 아니라 링크, 인용과 그 밖의 항목으로 구조적 문서를 만들 수 있는 방법을 제공한다. 그리고 이미지와 객체를 내장하여 대화형 양식을 생성하는 데 사용될 수 있다. 
         <p>HTML은 웹 페이지 콘텐츠 안의 꺾쇠 괄호에 둘러싸인 "태그"로 되어있는 HTML 요소 형태로 작성한다. HTML은 웹 브라우저와 같은 HTML 처리 장치의 행동에 영향을 주는 자바스크립트, 본문과 그 밖의 항목의 외관과 배치를 정의하는 CSS 같은 스크립트를 포함하거나 불러올 수 있다. HTML과 CSS 표준의 공동 책임자인 W3C는 명확하고 표상적인 마크업을 위하여 CSS의 사용을 권장한다.</p>
-       <ol>
-            <li><a href="1.html">html</a></li>
-            <li><a href="2.html">css</a></li>
-            <li><a href="3.html">javascript</a></li>
-            <li><a href="index.html">index</a></li>
-       </ol>
+    </div>
+    </div>
     </body>
 </html>
