--- a/3.html
+++ b/3.html
@@ -1,16 +1,23 @@
 <html>
     <head>
         <title>WEB</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>자바스크립트</h1>
-        <img src="js.jpg" width="100%">
-        <strong>Ecma International의 프로토타입 기반의 프로그래밍 언어로,</strong> 스크립트 언어에 해당된다. 특수한 목적이 아닌 이상 모든 웹 브라우저에 인터프리터가 내장되어 있다. 오늘날 HTML, CSS와 함께 웹을 구성하는 요소 중 하나다. HTML이 웹 페이지의 기본 구조를 담당하고, CSS가 디자인을 담당한다면 JavaScript는 클라이언트 단에서 웹 페이지가 동작하는 것을 담당한다.[1] 웹 페이지를 자동차에 비유하자면, HTML은 자동차의 뼈대, CSS는 자동차의 외관, JavaScript는 자동차의 동력원인 엔진이라고 볼 수 있다.</p>
+        <h1><a href="index.html"><font color = 'red'>WEB</font></a></h1>
+        <div class = "container">
+            <div id = "item1">
         <ol>
-            <li><a href="1.html">HTML</a></li>
-            <li><a href="2.html">CSS</a></li>
-            <li><a href="3.html">JavaScript</a></li>
-            <li><a href="index.html">index</a></li>
+            <li><a href="1.html"><font color = 'blue'>HTML</font></a></li>
+            <li><a href="2.html"><font color = 'blue'>CSS</font></a></li>
+            <li><a href="3.html"><font color = 'blue'>JS</font></a></li>
         </ol>
+        </div>
+        <div id="item2">
+        <h1>자바스크립트</h1>
+        <img src="5.jpg" width="100%">
+        <strong>Ecma International의 프로토타입 기반의 프로그래밍 언어로,</strong> 스크립트 언어에 해당된다. 특수한 목적이 아닌 이상 모든 웹 브라우저에 인터프리터가 내장되어 있다. 오늘날 HTML, CSS와 함께 웹을 구성하는 요소 중 하나다. HTML이 웹 페이지의 기본 구조를 담당하고, CSS가 디자인을 담당한다면 JavaScript는 클라이언트 단에서 웹 페이지가 동작하는 것을 담당한다.[1] 웹 페이지를 자동차에 비유하자면, HTML은 자동차의 뼈대, CSS는 자동차의 외관, JavaScript는 자동차의 동력원인 엔진이라고 볼 수 있다.</p>
+            </div>
+        </div>
     </body>
 </html>
